--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8"/>
-  <title></title>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">  
+<html>  
+<head>  
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-  <link rel="stylesheet" href=""/>
-</head>
-
-<body>
-	<a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/iik7zib82c6acao/manifest.plist">download</a>
-</body>
-
+  <title>OTA Ad-Hoc 설치 페이지</title>
+        <style>
+                li {margin: 10px;}
+        </style>
+</head>  
+<body>  
+<p>  
+이 페이지는 비공개 앱 OTA 테스트(Closed OTA Test) 페이지 입니다.
+<font color="red">디바이스 권한의 없으면 OTA를 설치할 수 없습니다.  </font>  
+<br/>  
+문의 사항은 <a href="mailto:saltfactory@gmail.com">saltfactory@gmail.com</a> 으로 메일을 보내어 주십시오.
+</p>  
+  <ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/iik7zib82c6acao/manifest.plist">GEMDemo OTA 설치</a></li>
+  </ul>
+  </ul>
+</body> 
 </html>
