--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <font color="red">디바이스 권한의 없으면 OTA를 설치할 수 없습니다.  </font>  
 </p>  
   <ul>
-        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/74myou0idakjfeb/manifest.plist">GEMDemo OTA 설치</a></li>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/74myou0idakjfeb/manifest.plist">
+                GEMDemo OTA 설치</a>
+            latest released
+        </li>
   </ul>
   </ul>
 </body> 
