--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 </p>  
   <ul>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/74myou0idakjfeb/manifest.plist">
-                GEMDemo OTA 설치</a>
+                GEMDemo v1.0.3 OTA 설치</a>
             latest released
+        </li>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/k9s1o6nwzl6yxij/manifest.plist">
+                GEMDemo v1.0.2 OTA 설치</a>
         </li>
   </ul>
   </ul>
