--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <body>  
 <p>  
 이 페이지는 비공개 앱 OTA 테스트(Closed OTA Test) 페이지 입니다.
-<font color="red">디바이스 권한의 없으면 OTA를 설치할 수 없습니다.  </font>  
+<font color="red">디바이스 권한이 없으면 OTA를 설치할 수 없습니다.  </font>  
 </p>  
   <ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/nghsirs179wh5g5/manifest.plist">
+                GEMDemo v1.0.3.a OTA 설치</a>
+            latest released - temp version(red color patch)
+        </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/74myou0idakjfeb/manifest.plist">
                 GEMDemo v1.0.3 OTA 설치</a>
-            latest released
         </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/k9s1o6nwzl6yxij/manifest.plist">
                 GEMDemo v1.0.2 OTA 설치</a>
