--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 <font color="red">디바이스 권한이 없으면 OTA를 설치할 수 없습니다.  </font>  
 </p>  
   <ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/oqodqom0futth1x/manifest.plist">
+                GEMDemo v1.0.4.a OTA 설치</a>
+            latest released - temp version(red color patch)
+        </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/nghsirs179wh5g5/manifest.plist">
                 GEMDemo v1.0.3.a OTA 설치</a>
-            latest released - temp version(red color patch)
+            - temp version(red color patch)
         </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/74myou0idakjfeb/manifest.plist">
                 GEMDemo v1.0.3 OTA 설치</a>
