--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <font color="red">디바이스 권한이 없으면 OTA를 설치할 수 없습니다.  </font>  
 </p>  
   <ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/xd419k0ty6w2me6/manifest.plist">
+                GEMDemo v1.0.5.a OTA 설치</a>
+            latest released - applied English, Japanese with red color patch
+        </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/oqodqom0futth1x/manifest.plist">
                 GEMDemo v1.0.4.a OTA 설치</a>
             latest released - temp version(red color patch)
