--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/oqodqom0futth1x/manifest.plist">
                 GEMDemo v1.0.4.a OTA 설치</a>
-            latest released - temp version(red color patch)
+            - temp version(red color patch)
         </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/nghsirs179wh5g5/manifest.plist">
                 GEMDemo v1.0.3.a OTA 설치</a>
