--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <ul>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/xd419k0ty6w2me6/manifest.plist">
                 GEMDemo v1.0.5.a OTA 설치</a>
-            latest released - applied English, Japanese language set <br> red color patch
+            latest released <br>- applied English, Japanese language set <br>- red color patch
         </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/oqodqom0futth1x/manifest.plist">
                 GEMDemo v1.0.4.a OTA 설치</a>
