--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 <font color="red">디바이스 권한이 없으면 OTA를 설치할 수 없습니다.  </font>  
 </p>  
   <ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/paac3u0xubm4knv/manifest.plist">
+                GEMDemo v1.0.6.a OTA 설치</a>
+            latest released <br>- fixed to keep the device that already connected <br>- red color patch
+        </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/yb0cvvlq1qwfa1u/manifest.plist">
                 GEMDemo v1.0.5.a OTA 설치</a>
-            latest released <br>- applied English, Japanese language set <br>- red color patch
+            <br>- applied English, Japanese language set <br>- red color patch
         </li>
         <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/oqodqom0futth1x/manifest.plist">
                 GEMDemo v1.0.4.a OTA 설치</a>
